--- a/todo.html
+++ b/todo.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="/todo.css">
 </head>
 <body class="bg-primary-subtle">
     <div class="container my-5">
@@ -18,24 +19,25 @@
                 <!-- Add a task item. -->
                 <form id="addTodoForm" class="row g-3">
                     <div class="col-md-4">
-                        <label class="form-label"><strong>Name</strong></label>
-                        <input id="newName" type="text" class="form-control" placeholder="Type your name." required />
+                        <label class="form-label"><strong>Name</strong>
+                            <input id="newName" type="text" class="form-control" placeholder="Type your name." required />
+                        </label>
                     </div>
 
                     <div class="col-md-4">
-                        <label class="form-label"><strong>Task Name</strong></label>
-                        <input id="newTaskName" type="text" class="form-control" placeholder="Type a task name."
-                            required />
+                        <label class="form-label"><strong>Task Name</strong>
+                            <input id="newTaskName" type="text" class="form-control" placeholder="Type a task name." required />
+                        </label>
                     </div>
 
                     <div class="col-md-4">
-                        <label class="form-label"><strong>Task Description</strong></label>
-                        <input id="newTaskDescription" type="text" class="form-control"
-                            placeholder="Type a task description." required />
+                        <label class="form-label"><strong>Task Description</strong>
+                        <input id="newTaskDescription" type="text" class="form-control" placeholder="Type a task description." required />
+                        </label>
                     </div>
 
                     <div class="col-12 text-end">
-                        <button id="submit" class="btn btn-primary">
+                        <button type="submit" class="btn btn-primary">
                             <i class="bi bi-clipboard2-plus-fill"></i>
                             <strong>Add</strong>
                         </button>
@@ -47,8 +49,9 @@
                 <!-- Deletes a todo item by Id. -->
                 <form class="row g-3">
                     <div class="col-md-6">
-                        <label class="form-label"><strong>Delete A Task</strong></label>
-                        <input id="idNumber" type="text" class="form-control" placeholder="Enter a task id." required />
+                        <label class="form-label"><strong>Delete A Task</strong>
+                            <input id="idNumber" type="text" class="form-control" placeholder="Enter a task id." required />
+                        </label>
                     </div>
 
                     <div class="col-md-12 text-end">
@@ -64,25 +67,28 @@
                 <!-- Update a todo Item-->
                 <form class="row g-3">
                     <div class="col-md-3">
-                        <label class="form-label"><strong>Task Id</strong></label>
-                        <input id="updateIdNumber" type="text" class="form-control"
-                            placeholder="Type an existing task id." required>
+                        <label class="form-label"><strong>Task Id</strong>
+                            <input id="updateIdNumber" type="text" class="form-control" placeholder="Type an existing task id." required>
+                        </label>
                     </div>
 
                     <div class="col-md-3">
-                        <label class="form-label"><strong>Full Name</strong></label>
-                        <input id="updateName" type="text" class="form-control" placeholder="Type a new name.">
+                        <label class="form-label"><strong>Full Name</strong>
+                            <input id="updateName" type="text" class="form-control" placeholder="Type a new name.">
+                        </label>
                     </div>
 
                     <div>
-                        <label class="col-md-3"><strong>Task Name</strong></label>
-                        <input id="updateTaskName" type="text" class="form-control" placeholder="Type a new task name.">
+                        <label class="col-md-3"><strong>Task Name</strong>
+                            <input id="updateTaskName" type="text" class="form-control" placeholder="Type a new task name.">
+                        </label>
                     </div>
 
                     <div>
-                        <label class="col-md-3"><strong>Description</strong></label>
-                        <input id="updateTaskDescription" type="text" class="form-control"
-                            placeholder="Type a new task description.">
+                        <label class="col-md-3"><strong>Description</strong>
+                            <textarea id="updateTaskDescription" type="text" class="form-control w-100" style="width: 30rem" placeholder="Type a new task description."></textarea>
+
+                        </label>
                     </div>
 
                     <div class="col-12 text-end">
@@ -97,8 +103,8 @@
                 </form>
             </div>
         </div>
-
-        <table class="table table-striped table-bordered mt-4">
+        <!-- All task that exist in a table -->
+        <table class="table todo-table table-striped table-bordered mt-4">
             <thead class="table-dark">
                 <tr>
                     <th>Task Id</th>
