added alerts and bootstrap

--- a/todo.html
+++ b/todo.html
@@ -47,7 +47,7 @@
                 <hr class="my-4">
 
                 <!-- Deletes a todo item by Id. -->
-                <form class="row g-3">
+                <form id=deleteListForm class="row g-3">
                     <div class="col-md-6">
                         <label class="form-label"><strong>Delete A Task</strong>
                             <input id="idNumber" type="text" class="form-control" placeholder="Enter a task id." required />
@@ -65,7 +65,7 @@
                 <hr class="my-4">
 
                 <!-- Update a todo Item-->
-                <form class="row g-3">
+                <form id=updateListForm class="row g-3">
                     <div class="col-md-3">
                         <label class="form-label"><strong>Task Id</strong>
                             <input id="updateIdNumber" type="text" class="form-control" placeholder="Type an existing task id." required>
