--- a/tracker.html
+++ b/tracker.html
@@ -4,35 +4,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo Application</title>
+    <title>Applicant Tracker</title>
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/todo.css">
+    <link rel="stylesheet" href="/tracker.css">
 </head>
+
 <body class="bg-primary-subtle">
     <div class="container my-5">
         <div class="card shadow-sm">
             <div class="card-body bg-secondary-subtle">
-                <h1 class="card-title mb-4 text-center">Todo List Application</h1>
+                <h1 class="card-title mb-4 text-center"><strong>Applicant Tracker</strong></h1>
                 <!-- Add a task item. -->
-                <form id="addTodoForm" class="row g-3">
+                <form id="addApplicantForm" class="row g-3">
+                    <h3 class="form-label text-center">Add An Application</h3>
                     <div class="col-md-4">
-                        <label class="form-label"><strong>Name</strong>
-                            <input id="newName" type="text" class="form-control" placeholder="Type your name." required />
+                        <label class="form-label"><strong>Applicant Name</strong>
+                            <input id="addApplicantName" type="text" class="form-control" placeholder="Name of applicant" required />
                         </label>
                     </div>
 
                     <div class="col-md-4">
-                        <label class="form-label"><strong>Task Name</strong>
-                            <input id="newTaskName" type="text" class="form-control" placeholder="Type a task name." required />
+                        <label class="form-label"><strong>Position</strong>
+                            <input id="addPosition" type="text" class="form-control" placeholder="Position of employment"
+                                required />
                         </label>
                     </div>
 
                     <div class="col-md-4">
-                        <label class="form-label"><strong>Task Description</strong>
-                        <input id="newTaskDescription" type="text" class="form-control" placeholder="Type a task description." required />
+                        <label class="form-label"><strong>Application Status</strong>
+                            <input id="addApplicationStatus" type="text" class="form-control"
+                                placeholder="Status of application" required />
                         </label>
                     </div>
 
@@ -47,15 +51,16 @@
                 <hr class="my-4">
 
                 <!-- Deletes a todo item by Id. -->
-                <form id=deleteListForm class="row g-3">
+                <form id=deleteApplication class="row g-3">
+                    <h3 class="form-label text-center">Delete An Application</h3>
                     <div class="col-md-6">
-                        <label class="form-label"><strong>Delete A Task</strong>
-                            <input id="idNumber" type="text" class="form-control" placeholder="Enter a task id." required />
+                        <label class="form-label"><strong>Application Id</strong>
+                            <input id="applicationId" type="text" class="form-control" placeholder="An application id" required />
                         </label>
                     </div>
 
                     <div class="col-md-12 text-end">
-                        <button type="button" class="btn btn-danger" onclick="deleteTodo()">
+                        <button type="button" class="btn btn-danger" onclick="deleteApplications()">
                             <i class="bi bi-trash-fill"></i>
                             <strong>Delete</strong>
                         </button>
@@ -65,36 +70,40 @@
                 <hr class="my-4">
 
                 <!-- Update a todo Item-->
-                <form id=updateListForm class="row g-3">
+                <form id=updateApplication class="row g-3">
+                    <h3 class="form-label text-center">Update An Application</h3>
                     <div class="col-md-3">
-                        <label class="form-label"><strong>Task Id</strong>
-                            <input id="updateIdNumber" type="text" class="form-control" placeholder="Type an existing task id." required>
+                        <label class="form-label"><strong>Applicant Id</strong>
+                            <input id="updateApplicantName" type="text" class="form-control"
+                                placeholder="An application id" required>
                         </label>
                     </div>
 
                     <div class="col-md-3">
-                        <label class="form-label"><strong>Full Name</strong>
-                            <input id="updateName" type="text" class="form-control" placeholder="Type a new name.">
+                        <label class="form-label"><strong>Applicant Name</strong>
+                            <input id="updateApplicantName" type="text" class="form-control" placeholder="New applicant Name">
                         </label>
                     </div>
 
                     <div>
-                        <label class="col-md-3"><strong>Task Name</strong>
-                            <input id="updateTaskName" type="text" class="form-control" placeholder="Type a new task name.">
+                        <label class="col-md-3"><strong>Position</strong>
+                            <input id="updatePosition" type="text" class="form-control"
+                                placeholder="New position of employment">
                         </label>
                     </div>
 
                     <div>
-                        <label class="col-md-3"><strong>Description</strong>
-                            <textarea id="updateTaskDescription" type="text" class="form-control w-100" style="width: 30rem" placeholder="Type a new task description."></textarea>
+                        <label class="col-md-3"><strong>Application Status</strong>
+                            <textarea id="updateApplicationStatus" type="text" class="form-control w-100"
+                                style="width: 30rem" placeholder="New application status."></textarea>
 
                         </label>
                     </div>
 
                     <div class="col-12 text-end">
-                        <button type="button" class="btn btn-success" onclick="updateTodo()">
+                        <button type="button" class="btn btn-success" onclick="updateApplications()">
                             <i class="bi bi-pencil-fill"></i>
-                            <strong>Update Task</strong>
+                            <strong>Update</strong>
                         </button>
                     </div>
 
@@ -104,18 +113,16 @@
             </div>
         </div>
         <!-- All task that exist in a table -->
-        <table class="table todo-table table-striped table-bordered mt-4">
+        <table class="table tracker-table striped table-bordered mt-4">
             <thead class="table-dark">
                 <tr>
-                    <th>Task Id</th>
-                    <th>Name</th>
-                    <th>Task Name</th>
-                    <th>Task Description</th>
+                    <th>Applicant Name</th>
+                    <th>Position</th>
+                    <th>Application Status</th>
                 </tr>
             </thead>
-            <tbody id="todoTableBody"></tbody>
+            <tbody id="trackerTableBody"></tbody>
         </table>
-        <!-- <ul id="todoList" class="list-group mt-4"></ul> -->
     </div>
     <!-- Todo Form: Adds a new todo item to the form and displays the list.-->
     <!-- Jquery CDN  -->
@@ -126,6 +133,7 @@
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
     <!-- JavaScript-->
-    <script src="./todo.js"></script>
+    <script src="./tracker.js"></script>
 </body>
+
 </html>
