--- a/tracker.html
+++ b/tracker.html
@@ -26,6 +26,12 @@
                         </label>
                     </div>
 
+                     <div class="col-md-4">
+                        <label class="form-label"><strong>Company Name</strong>
+                            <input id="addCompanyName" type="text" class="form-control" placeholder="Company name" required>
+                        </label>
+                    </div>
+
                     <div class="col-md-4">
                         <label class="form-label"><strong>Position</strong>
                             <input id="addPosition" type="text" class="form-control" placeholder="Position of employment"
@@ -59,7 +65,7 @@
                         </label>
                     </div>
 
-                    <div class="col-md-12 text-end">
+                    <div class="col-md-12">
                         <button type="button" class="btn btn-danger" onclick="deleteApplications()">
                             <i class="bi bi-trash-fill"></i>
                             <strong>Delete</strong>
@@ -82,6 +88,12 @@
                     <div class="col-md-3">
                         <label class="form-label"><strong>Applicant Name</strong>
                             <input id="updateApplicantName" type="text" class="form-control" placeholder="New applicant name">
+                        </label>
+                    </div>
+
+                    <div class="col-md-3">
+                        <label class="form-label"><strong>Company Name</strong>
+                            <input id="updateCompanyName" type="text" class="form-control" placeholder="New company name">
                         </label>
                     </div>
 
@@ -117,6 +129,7 @@
                 <tr>
                     <th>Application Id</th>
                     <th>Applicant Name</th>
+                    <th>Company Name</th>
                     <th>Position</th>
                     <th>Application Status</th>
                 </tr>
